<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <Button
            android:id="@+id/approvals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/approvals" />
        <Button
            android:id="@+id/delegate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delegate" />
        <Button
            android:id="@+id/pup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pup" />
        <Button
            android:id="@+id/countersign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countersign" />
        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_gravity="bottom"/>
    </LinearLayout>
</LinearLayout>